Simulation Kunde initial fertig gestellt. Abgangsprozess simuliert

--- a/README.org
+++ b/README.org
@@ -1,26 +1,10 @@
-
-# Simulations and Documentation
-
-
-## Description
-
+* Simulations and Documentation
+** Description
 Simulation and Documentation for the Paper "Nonparametric Estimation of the Service Time Distribution in Discrete-Time Queueing Networks"
-
-
-## List of Files
-
-
-### queueing<sub>network.R</sub>
-
+** List of Files
+*** queueing_network.R
 Simulation of a two node QN.
-
-
-### spa<sub>queueingnetwork.RProj</sub>
-
+*** spa_queueingnetwork.RProj
 RProject used in RStudio.
-
-
-### README.org
-
+*** README.org
 ORG-File in EMACS, creates README.md.
-
